# mycroft-gui-mark-2

./: CMakeLists.txt
containments/mark2/package/contents/config/: main.xml
containments/mark2/package/contents/ui/: ListenerAnimation.qml  ListeningOverlay.qml  NetworkingLoader.qml  VideoElement.qml  VolumeBar.qml  VolumeFeedbackGraphics.qml  main.qml
containments/mark2/package/contents/ui/networking/: Connecting.qml  Fail.qml  NetworkItem.qml  SelectNetwork.qml  Success.qml
containments/mark2/package/contents/ui/osd/: SliderControl.qml  VolumeOSD.qml
containments/mark2/package/contents/ui/panel/: SlidingPanel.qml
containments/mark2/package/contents/ui/panel/contents/ui/: SlidingPanel.qml  main.qml
containments/mark2/package/contents/ui/panel/contents/ui/quicksettings/: Delegate.qml  QuickSettings.qml  SliderBase.qml  WirelessDelegate.qml
containments/mark2/package/contents/ui/panel/quicksettings/: Delegate.qml  QuickSettings.qml  VolumeSlider.qml
containments/mark2/plugin/: mark2systemaccess.h
icons/: CMakeLists.txt
lookandfeel/contents/: defaults
lookandfeel/contents/plasmoidsetupscripts/: org.kde.mycroft.mark2.js
lookandfeel/contents/splash/: Splash.qml
